# spma

./: .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
docs/: algorithm-assessment-2.md  algorithm-assessment.md  alignment-struct-design.md  architecture.md  calibrated-score-design.md  gap-patterns-design.md  grammar-spec.md  hierarchical-grammar-code-review.md  hierarchical-grammar-design.md  known-issues.md  known-limitations.md  performance.md  plan-inverted-index.md  profiling-guide.md  release.md  roadmap.md  scenario.md  scoring.md  study.md
docs/prompts/: add-grammar-subcommand.md  add-infer-threshold-override.md  add-mimalloc.md  add-progress-output.md  add-recalibrate-subcommand.md  optimize-infer.md  per-level-anomaly-gate.md  profile-and-optimize-training.md  remove-hdfs-event-desc.md  uncovered-atoms-neutral.md
docs/superpowers/plans/: 2026-07-16-hierarchical-grammar.md  2026-07-17-recalibrate-subcommand.md
examples/: README.md  fault_detection.rs  ordered_sequences.rs  save_load.rs
spma/: Cargo.toml  README.md
spma-cli/: Cargo.toml  README.md
spma-cli/src/: main.rs
spma/examples/: README.md  fault_detection.rs  threshold_tuning.rs
spma/src/: alignment.rs  beam.rs  engine.rs  lib.rs  model.rs
spma/tests/: calibrated_score.rs  gap_matching.rs  regression.rs  training.rs
src/: alignment.rs  beam.rs  engine.rs  intern.rs  lib.rs  main.rs  model.rs
tests/: alignment_construction.rs  api.rs  beam.rs  beam_correctness.rs  calibrated_score.rs  edge_cases.rs  engine.rs  gap_matching.rs  hierarchical.rs  integration_tests.rs  regression.rs  symbols.rs  training.rs
