[package]
name = "spma"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "spma"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
rayon = "1"
mimalloc = { version = "0.1", default-features = false }

[[bin]]
name = "spma"
path = "src/bin/spma.rs"

[dev-dependencies]

[lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "allow"
nursery = "allow"
