[package]
name = "spma"
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
description = "Unsupervised anomaly detection for discrete event sequences via MDL-based grammar induction (SP Multiple Alignment)"
license = "MIT OR Apache-2.0"
authors = ["Jerome Guibert"]
repository = "https://github.com/geronimo-iia/spma"
readme = "README.md"
keywords = ["anomaly-detection", "grammar-induction", "log-analysis", "mdl", "beam-search"]
categories = ["algorithms", "science"]

[lib]
name = "spma"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1"

[dev-dependencies]

[lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "allow"
nursery = "allow"
